chore: fix missing `@{argLine}`
[WARNING] Quarkus Maven extension: an explicit 'argLine' is defined in
maven-surefire-plugin config, but does not contain '@{argLine}': we will not be
able to inject JVM parameters automatically. Please add '@{argLine}' to the
argLine configuration you have defined.